--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,10 @@
     <color name="colorAccent">#E0E0E0</color>
     <color name="color_loading_spinner">#886A08</color>
     <color name="text_color_primary">#52524B</color>
+
+    <item name="transparent" type="color">#00FFFFFF</item>
+    <item name="transparent_grey" type="color">#00999999</item>
+    <item name="grey" type="color">#555555</item>
+    <item name="green" type="color">#4499CC00</item>
+    <item name="darkgreen" type="color">#FF669900</item>
 </resources>
