--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,7 +12,10 @@
     <dimen name="margin_size_medium">8dp</dimen>
     <dimen name="margin_size_default">10dp</dimen>
     <dimen name="margin_size_large">15dp</dimen>
+    <dimen name="margin_size_extra_large">25dp</dimen>
 
     <dimen name="thumbnail_height">200dp</dimen>
+    <dimen name="text_site_large">15sp</dimen>
+    <dimen name="select_rover_fragment_height">270dp</dimen>
 
 </resources>
