--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,18 @@
         app:cpv_indeterminate="true"
         app:cpv_thickness="2dp"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_rovers"
+        style="@style/MarsRover.Widget.FloatingActionButton"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:src="@drawable/ic_action_add"
+        android:visibility="gone"
+        app:fabSize="normal"/>
+
 </RelativeLayout>
