--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,7 +11,7 @@
 
     <item
         android:id="@+id/menu_rover"
-        android:icon="@android:drawable/ic_menu_camera"
+        android:icon="@drawable/icon_curiosity"
         android:title="@string/action_select_rover"
         app:showAsAction="collapseActionView|ifRoom"/>
 
